force-app/main/default/objects/Invoice__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>The date by which payment for the invoice is expected.</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>