force-app/main/default/objects/Invoice__c/fields/Insurance_Company__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Company__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Insurance Company</label>
    <referenceTo>Insurance_Company__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>