force-app/main/default/objects/Invoice__c/fields/Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>Issue_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>The date when the invoice was issued. Defaults to today when created.</description>
    <inlineHelpText>Enter or confirm the invoice issue date. Defaults to the current date.</inlineHelpText>
    <label>Issue Date</label>
    <type>Date</type>
</CustomField>