force-app/main/default/objects/Invoice__c/fields/Payment_Link__c.field-meta.xml
<CustomField>
    <fullName>Payment_Link__c</fullName>
    <description>Stores the Stripe Checkout payment link generated for this invoice. The link is sent via email, so online payment can be completed.</description>
    <label>Payment Link</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>