force-app/main/default/objects/Invoice__c/fields/PDFMonkey_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>PDFMonkey_Document_Id__c</fullName>
    <label>PDFMonkey Document Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>